--- a/test2/index.html
+++ b/test2/index.html
@@ -18,6 +18,7 @@
     </ul>
     <img src="images/mantis.jpg" alt="A pretty decent animal.">
     <p class="copyright">Image copyright: <a href="https://www.flickr.com/photos/pacificklaus/4852217254">Klaus Stiefel</a></p>
+    <button>Change user</button>
     <script src="scripts/main.js"></script>
   </body>
 </html>
