--- a/a1/index.html
+++ b/a1/index.html
@@ -6,6 +6,32 @@
     <meta name="author" content="Mr. Bla">
     <title>Letter</title>
     <meta name="description" content="A letter">
+    <style>
+body {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.sender-column {
+  text-align: right;
+}
+
+h1 {
+  font-size: 1.5em;
+}
+
+h2 {
+  font-size: 1.3.em;
+}
+
+p,ul,ol,dl,address {
+  font-size: 1.1em;
+}
+
+p,li,dd,dt,address {
+  line-height: 1.5;
+}
+    </style
   </head>
   <body>
     <p class="sender-column">
@@ -27,7 +53,7 @@
      </p>
     <h1>Re: Eileen Dover university application</h1>
     <p>Dear Eileen,</p>
-    <p>Thank you blah blah blah. More blah blah blah. And even more blah blabh blah blah blah!</p>
+    <p>Thank you blah <em>blah</em> blah. More blah blah blah. And even more blah blabh blah blah blah!</p>
     <h2>Starting dates</h2>
     <p>Blah blah:</p>
     <ul>
@@ -51,5 +77,8 @@
       <dt>Blah2</dt>
       <dd>blabh fjdklfajdl aljdflka dlfj aljfdaljdsf llkajdsfla jslfaj ldsjfalksd flajsd faljsjfa lsjf lajsfadfjaldsjf aldkfjalsj flajslkfajslfja lksfj alsdj flasjd lfajsdlkf jalks jflkajsf lkajlkd fjlajdsfkl</dd>
     </dl>
+    <p>Yours sincerely,</p>
+    <p>Dr Eleanor Gaye</p>
+    <p>University of Awesome motto: <q>Be excellent to each other</q> -- <cite>Bill S Presont, <abbr title="Esquire">Esq</abbr></cite></p>
   </body>
 </html>
