--- a/a1/index.html
+++ b/a1/index.html
@@ -21,7 +21,7 @@ h1 {
 }
 
 h2 {
-  font-size: 1.3.em;
+  font-size: 1.3em;
 }
 
 p,ul,ol,dl,address {
@@ -31,7 +31,7 @@ p,ul,ol,dl,address {
 p,li,dd,dt,address {
   line-height: 1.5;
 }
-    </style
+    </style>
   </head>
   <body>
     <p class="sender-column">
