--- a/js1/apply-javascript.html
+++ b/js1/apply-javascript.html
@@ -6,17 +6,6 @@
   </head>
   <body>
     <button>Click me</button>
-    <script>
-      function createParagraph() {
-        var para = document.createElement('p');
-        para.textContent = 'You clicked the button!';
-        document.body.appendChild(para);
-      }
-      var buttons = document.querySelectorAll('button');
-
-      for (var i = 0; i< buttons.length; i++) {
-        buttons[i].addEventListener('click', createParagraph);
-      }
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
