--- a/js1/apply-javascript.html
+++ b/js1/apply-javascript.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <button>Click me</button>
+    <button>Click me2</button>
     <script src="script.js"></script>
   </body>
 </html>
